# Pedestrain_Detection

./: CMakeLists.txt  README.md
img_dir/: pos1.txt  sample_neg.txt  sum_pos.txt
test/: crop_image.cpp  detection.cpp  detection.h  detection_crop.cpp  find_save_hardexample.cpp  test_main.cpp
